[package]
name = "dungeon-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "~0.8"
bevy = { version = "~0.7", features = ["dynamic"] }
bevy_rapier2d = "~0.14"
bracket-lib = "~0.8"
serde = "~1.0"
ron = "~0.7"

